; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/smipcie/extr_smipcie-main.c_smi_i2c_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/smipcie/extr_smipcie-main.c_smi_i2c_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smi_dev = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.smi_dev*)* @smi_i2c_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smi_i2c_exit(%struct.smi_dev* %0) #0 {
  %2 = alloca %struct.smi_dev*, align 8
  store %struct.smi_dev* %0, %struct.smi_dev** %2, align 8
  %3 = load %struct.smi_dev*, %struct.smi_dev** %2, align 8
  %4 = getelementptr inbounds %struct.smi_dev, %struct.smi_dev* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = call i32 @i2c_del_adapter(i32* %6)
  %8 = load %struct.smi_dev*, %struct.smi_dev** %2, align 8
  %9 = getelementptr inbounds %struct.smi_dev, %struct.smi_dev* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 1
  %12 = call i32 @i2c_del_adapter(i32* %11)
  ret void
}

declare dso_local i32 @i2c_del_adapter(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
